--- a/01-semantic-html/cafe/exercise.html
+++ b/01-semantic-html/cafe/exercise.html
@@ -5,54 +5,58 @@
     <title>Café Hygge – Velkommen</title>
 </head>
 <body>
-    <div class="top">
-        <div class="title">Café Hygge</div>
-        <div class="slogan">Kaffe, kage og kærlighed – siden 2011</div>
-    </div>
+<header>
+    <h1>Café Hygge</h1>
+    <h3>Kaffe, kage og kærlighed – siden 2011</h3>
+</header>
 
-    <div class="nav">
-        <div class="link">Om os</div>
-        <div class="link">Menu</div>
-        <div class="link">Kontakt</div>
-    </div>
+<nav>
+    <ul>
+    <li><a href="om"> Om os</a></li>
+        <li><a href="Menu"> Menu</a></li>
+    <li><a href="kontakt"> Kontakt</a></li>
+    </ul>
+</nav>
 
-    <div class="main">
-        <div class="section" id="om">
-            <div class="heading">Om Café Hygge</div>
-            <div class="text">Vi er en lokal café i hjertet af Roskilde, kendt for vores gode stemning, hjemmelavede kager og nøje udvalgte kaffebønner.</div>
-        </div>
-
-        <div class="section" id="produkter">
-            <div class="heading">Vores Menu</div>
-
-            <div class="product">
-                <div class="product-name">Latte</div>
-                <div class="product-img"><img src="latte.jpg" alt="Et glas latte med skum på toppen"></div>
-                <div class="product-desc">Serveres varm med dobbelt espresso og dampet mælk</div>
-                <div class="product-price"><span>Pris:</span> 40 kr.</div>
-            </div>
-
-            <div class="product">
-                <div class="product-name">Hindbærsnitte</div>
-                <div class="product-img"><img src="hindbaersnitte.jpg" alt="En klassisk hindbærsnitte med glasur"></div>
-                <div class="product-desc">Friskbagt hver morgen</div>
-                <div class="product-price"><span>Pris:</span> 25 kr.</div>
-            </div>
-
-            <div class="product">
-                <div class="product-name">Iskaffe</div>
-                <div class="product-img"><img src="iskaffe.jpg" alt="Et glas iskaffe med isterninger og sugerør"></div>
-                <div class="product-desc">Med havremælk og vaniljesirup</div>
-                <div class="product-price"><span>Pris:</span> 45 kr.</div>
-            </div>
+<div class="main">
+    <div class="section" id="om">
+        <div class="heading">Om Café Hygge</div>
+        <div class="text">Vi er en lokal café i hjertet af Roskilde, kendt for vores gode stemning, hjemmelavede kager
+            og nøje udvalgte kaffebønner.
         </div>
     </div>
 
-    <div class="footer" id="kontakt">
-        <div class="contact-heading">Kontakt</div>
-        <div class="contact-text">Email: <a href="mailto:info@cafehygge.dk">info@cafehygge.dk</a></div>
-        <div class="address">Adresse: Rosenvej 12, 4000 Roskilde</div>
-        <div class="copyright">© 2025 Café Hygge</div>
+    <div class="section" id="produkter">
+        <div class="heading">Vores Menu</div>
+
+        <div class="product">
+            <div class="product-name">Latte</div>
+            <div class="product-img"><img src="latte.jpg" alt="Et glas latte med skum på toppen"></div>
+            <div class="product-desc">Serveres varm med dobbelt espresso og dampet mælk</div>
+            <div class="product-price"><span>Pris:</span> 40 kr.</div>
+        </div>
+
+        <div class="product">
+            <div class="product-name">Hindbærsnitte</div>
+            <div class="product-img"><img src="hindbaersnitte.jpg" alt="En klassisk hindbærsnitte med glasur"></div>
+            <div class="product-desc">Friskbagt hver morgen</div>
+            <div class="product-price"><span>Pris:</span> 25 kr.</div>
+        </div>
+
+        <div class="product">
+            <div class="product-name">Iskaffe</div>
+            <div class="product-img"><img src="iskaffe.jpg" alt="Et glas iskaffe med isterninger og sugerør"></div>
+            <div class="product-desc">Med havremælk og vaniljesirup</div>
+            <div class="product-price"><span>Pris:</span> 45 kr.</div>
+        </div>
     </div>
+</div>
+
+<div class="footer" id="kontakt">
+    <div class="contact-heading">Kontakt</div>
+    <div class="contact-text">Email: <a href="mailto:info@cafehygge.dk">info@cafehygge.dk</a></div>
+    <div class="address">Adresse: Rosenvej 12, 4000 Roskilde</div>
+    <div class="copyright">© 2025 Café Hygge</div>
+</div>
 </body>
 </html>
