--- a/01-semantic-html/cafe/exercise.html
+++ b/01-semantic-html/cafe/exercise.html
@@ -18,45 +18,48 @@
     </ul>
 </nav>
 
-<div class="main">
-    <div class="section" id="om">
-        <div class="heading">Om Café Hygge</div>
-        <div class="text">Vi er en lokal café i hjertet af Roskilde, kendt for vores gode stemning, hjemmelavede kager
-            og nøje udvalgte kaffebønner.
-        </div>
-    </div>
+<main>
+    <section id="om">
+        <h2>Om Café Hygge</h2>
+        <p>Vi er en lokal café i hjertet af Roskilde, kendt for vores gode stemning, hjemmelavede kager
+            og nøje udvalgte kaffebønner.</p>
+    </section>
 
-    <div class="section" id="produkter">
-        <div class="heading">Vores Menu</div>
 
-        <div class="product">
-            <div class="product-name">Latte</div>
-            <div class="product-img"><img src="latte.jpg" alt="Et glas latte med skum på toppen"></div>
-            <div class="product-desc">Serveres varm med dobbelt espresso og dampet mælk</div>
-            <div class="product-price"><span>Pris:</span> 40 kr.</div>
-        </div>
+    <section id="produkter">
+        <h2>Vores Menu</h2>
 
-        <div class="product">
-            <div class="product-name">Hindbærsnitte</div>
-            <div class="product-img"><img src="hindbaersnitte.jpg" alt="En klassisk hindbærsnitte med glasur"></div>
-            <div class="product-desc">Friskbagt hver morgen</div>
-            <div class="product-price"><span>Pris:</span> 25 kr.</div>
-        </div>
+        <article>
 
-        <div class="product">
-            <div class="product-name">Iskaffe</div>
-            <div class="product-img"><img src="iskaffe.jpg" alt="Et glas iskaffe med isterninger og sugerør"></div>
-            <div class="product-desc">Med havremælk og vaniljesirup</div>
-            <div class="product-price"><span>Pris:</span> 45 kr.</div>
-        </div>
-    </div>
-</div>
+        <h4>Latte</h4>
+            <p>Serveres varm med dobbelt espresso og dampet mælk</p>
+            <p><strong>Pris:</strong>40kr</p>
+        </article>
+    </section>
 
-<div class="footer" id="kontakt">
+    <article>
+
+        <h4>Hindbærsnitte</h4>
+        <p>Friskbagt hver morgen</p>
+        <p><strong>Pris:</strong>25kr</p>
+    </article>
+
+    <article>
+
+        <h4>Iskaffe</h4>
+        <p>Med havremælk og vaniljesirup</p>
+        <p><strong>Pris:</strong>45kr</p>
+    </article>
+
+
+</main>
+
+
+<footer>
     <div class="contact-heading">Kontakt</div>
     <div class="contact-text">Email: <a href="mailto:info@cafehygge.dk">info@cafehygge.dk</a></div>
     <div class="address">Adresse: Rosenvej 12, 4000 Roskilde</div>
     <div class="copyright">© 2025 Café Hygge</div>
-</div>
+</footer>
 </body>
 </html>
