--- a/01-semantic-html/cafe/exercise.html
+++ b/01-semantic-html/cafe/exercise.html
@@ -55,11 +55,14 @@
 </main>
 
 
-<footer>
-    <div class="contact-heading">Kontakt</div>
-    <div class="contact-text">Email: <a href="mailto:info@cafehygge.dk">info@cafehygge.dk</a></div>
-    <div class="address">Adresse: Rosenvej 12, 4000 Roskilde</div>
-    <div class="copyright">© 2025 Café Hygge</div>
+<footer id="Kontakt">
+    <h3>Kontakt</h3>
+
+    <address>
+        Email: <a href="mailto:info@cafehygge.dk">info@cafehygge.dk</a><br>
+        Adresse: Rosenvej 12, 4000 Roskilde
+    </address>
+    <p>© 2025 Café Hygge</p>
 </footer>
 </body>
 </html>
