--- a/01-semantic-html/eventside/exercise.html
+++ b/01-semantic-html/eventside/exercise.html
@@ -4,23 +4,27 @@
   <meta charset="UTF-8">
   <title>Sommerkoncert 2025</title>
 </head>
+
 <body>
-  <div class="top">
-    <div class="title">Sommerkoncert 2025</div>
-    <div class="date">Lørdag d. 15. juni 2025</div>
-  </div>
 
-  <div class="menu">
-    <div class="item">Program</div>
-    <div class="item">Billetter</div>
-    <div class="item">Kontakt</div>
-  </div>
+    <h1>Sommerkoncert 2025</h1>
+    <p>Lørdag d. 15. juni 2025</p>
 
-  <div class="main-content">
-    <div class="section">
-      <div class="heading">Om koncerten</div>
-      <div class="text">Velkommen til årets største udendørs musikoplevelse i Roskilde Parken. Tag vennerne med til en dag fyldt med livemusik, madboder og sommerstemning.</div>
-    </div>
+<menu id="menu">
+<ul>
+  <li><a href="Program">Program</a> </li>
+  <li><a href="Billetter">Billetter</a> </li>
+  <li><a href="Kontakt">Kontakt</a> </li>
+</ul>
+
+</menu>
+
+
+  <main>
+    <section>
+      <h2>Om koncerten</h2>
+      <p>Velkommen til årets største udendørs musikoplevelse i Roskilde Parken. Tag vennerne med til en dag fyldt med livemusik, madboder og sommerstemning.</p>
+    </section>
 
     <div class="section">
       <div class="heading">Program</div>
@@ -37,6 +41,8 @@
       <div class="text">Billetter koster 250 kr. for voksne og 100 kr. for børn under 12 år. Køb dem online eller i døren.</div>
     </div>
   </div>
+
+  </main>
 
   <div class="bottom">
     <div class="contact">Kontakt: info@sommerkoncert.dk</div>
