done event commit

--- a/01-semantic-html/eventside/exercise.html
+++ b/01-semantic-html/eventside/exercise.html
@@ -41,9 +41,15 @@
 
   </main>
 
-  <div class="bottom">
-    <div class="contact">Kontakt: info@sommerkoncert.dk</div>
-    <div class="copyright">© 2025 Sommerkoncert</div>
+    <footer>
+      <h3>Kontakt</h3>
+
+      <address>
+        Email: <a href="info@sommerkoncert.dk">info@sommerkoncert.dk</a><br>
+      </address>
+      <p>© 2025 Sommerkoncert</p>
   </div>
+
+    </footer>
 </body>
 </html>
