done galleri commit

--- a/01-semantic-html/galleri/exercise.html
+++ b/01-semantic-html/galleri/exercise.html
@@ -23,7 +23,7 @@
 
         <section id="Galleri">
             <h2>Galleri</h2>
-            <figure></figure>
+            <figure>
                 <img src="maleri1.jpg" alt="Abstrakt maleri med røde og blå nuancer">
                 <figcaption>"Spektrum" – olie på lærred, 2022</figcaption>
             </figure>
